2006-07-10 TADA Tadashi <sho@spc.gr.jp>
	* plugin/ja/10spamfilter.rb: modify messages of preference page more.
	* theme/conf.css: hide div.footer, and enlarge submit button.
	* skel/conf.rhtml: add some classes.

2006-07-10 TADA Tadashi <sho@spc.gr.jp>
	* plugin/ja/10spamfilter.rb: modify messages of preference page.

2006-07-08 TADA Tadashi <sho@spc.gr.jp>
	* tdiary/filter/default.rb: TSUKKOMI filtered by 'POST' command exactly.

2006-07-05 TADA Tadashi <sho@spc.gr.jp>
	* misc/style/wiki: fix bug and add notice about obsolete to README.
	thanks Norihiro Hattori <norihiro.hattori at gmail.com>.
	* tdiary/defaultio.rb: fix Errno::EACCES error when convert referer to new
	formats on Windows.
	* tdiary/filter/default.rb: check POST method correctly.

2006-07-05 TADA Tadashi <sho@spc.gr.jp>
	* tdiary/defaultio.rb: close file before delete empty diary file.

2006-07-04 TADA Tadashi <sho@spc.gr.jp>
	* add 'tdiary.conf.beginner' for configuration file for beginner.
	* theme/default: move sidebar to rightside, and support beginner conf.

2006-06-26 TADA Tadashi <sho@spc.gr.jp>
	* add help button to each preferences.
	* plugin/ja/10spamfilter.rb: change some words.

2006-06-26 SHIBATA Hiroshi <h-sbt@nifty.com>
	* plugin/10spamfilter.rb: fix bug about spamfilter.date_limit. thanks OGAWA KenIchi.

2006-05-28 TADA Tadashi <sho@spc.gr.jp>
	* index.rb, update.rb: return status 500 on error when "MSIE" also.

2006-05-26 TADA Tadashi <sho@spc.gr.jp>
	* index.rb, update.rb: return status 500 on error. thanks Masahiro Sakai.

2006-05-24  Kazuhiko  <kazuhiko@fdiary.net>
	* misc/style/etdiary/etdiary_style.rb: remove debug code.

2006-05-13 TADA Tadashi <sho@spc.gr.jp>
	* plugin/50sp.rb: add tDiary path before 'misc/plugin' in sp.path. thanks
	KURODA Hiraku.
	* tdiary.rb: fix bug about counting TrackBack. thanks Masahiro YOSHIZAWA.

2006-04-15 TADA Tadashi <sho@spc.gr.jp>
	* release 2.1.4 at dotBAR.

2006-03-23 TADA Tadashi <sho@spc.gr.jp>